--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 		<link rel="shortcut icon" href="http://www.cs.yorku.ca/~kamel/sidd/favicon.ico" type="image/ico">
 
 		<!--<link rel="stylesheet" href="css/reset.css"/>  -->
-		<link rel="stylesheet" href="./SIDD_files/styles.css">
+		<link rel="stylesheet" href="./files/styles.css">
 
-		<script type="text/javascript" src="./SIDD_files/scripts.js.下载"></script>
+		<script type="text/javascript" src="./files/scripts.js.下载"></script>
 
 		<!-- for slider -->
-		<link href="./SIDD_files/css" rel="stylesheet" type="text/css">
+		<link href="./files/css" rel="stylesheet" type="text/css">
 
-		<script src="./SIDD_files/modernizr.js.下载"></script>
+		<script src="./files/modernizr.js.下载"></script>
 		
 		<!-- table sorting -->
-		<script src="./SIDD_files/sort_table.js.下载"></script>
-		<link href="./SIDD_files/font-awesome.min.css" rel="stylesheet">
+		<script src="./files/sort_table.js.下载"></script>
+		<link href="./files/font-awesome.min.css" rel="stylesheet">
 		
 	</head>
 
