--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			
 <div class="head-container">
 	<div style="width: 100%; text-align:center;">
-		<h2>Smartphone Image Denoising Dataset</h2>
+		<h2>High-Quality Image Deraining Dataset</h2>
 		<p>
 		<a href="https://www.eecs.yorku.ca/~kamel/" target="_blank" rel="noopener">Abdelrahman Abdelhamed</a><sup>1</sup>
 		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
