--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>SIDD</title>
+		<title>Deraining</title>
 		<link rel="shortcut icon" href="http://www.cs.yorku.ca/~kamel/sidd/favicon.ico" type="image/ico">
 
 		<!--<link rel="stylesheet" href="css/reset.css"/>  -->
@@ -38,17 +38,17 @@
 	<div style="width: 100%; text-align:center;">
 		<h2>High-Quality Image Deraining Dataset</h2>
 		<p>
-		<a href="https://www.eecs.yorku.ca/~kamel/" target="_blank" rel="noopener">Abdelrahman Abdelhamed</a><sup>1</sup>
+		<a href="https://www.eecs.yorku.ca/~kamel/" target="_blank" rel="noopener">Xiang Chen</a><sup>1</sup>
 		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-		<a href="https://www.microsoft.com/en-us/research/people/stevelin/" target="_blank" rel="noopener">Stephen Lin</a><sup>2</sup>
+		<a href="https://www.microsoft.com/en-us/research/people/stevelin/" target="_blank" rel="noopener">Jinshan Pan</a><sup>2</sup>
 		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-		<a href="https://www.eecs.yorku.ca/~mbrown/" target="_blank">Michael S. Brown</a><sup>1</sup>
+		<a href="https://www.eecs.yorku.ca/~mbrown/" target="_blank">XXX</a><sup>1</sup>
 		</p>
 
 		<p>
-		<sup>1</sup><a href="http://eecs.lassonde.yorku.ca/" target="_blank" rel="noopener">York University</a>
+		<sup>1</sup><a href="http://eecs.lassonde.yorku.ca/" target="_blank" rel="noopener">Nanjing University of Science and Technology</a>
 		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-		<sup>2</sup><a href="https://www.microsoft.com/en-us/research/" target="_blank" rel="noopener">Microsoft Research</a>
+		<sup>2</sup><a href="https://www.microsoft.com/en-us/research/" target="_blank" rel="noopener">XXX</a>
 
 		</p>
 	</div>
