--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 		<div class="body-container">
 
-			<h1>SIDD Benchmark</h1>
+			<h1>HQ-RAIN Benchmark</h1>
 
 			<div class="entry grey-back">
 
@@ -557,185 +557,11 @@
 			</table>
 
 
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-
-
 			</tbody>
 			</table>
 
 
-
 			<!--<h1>Submit Your Results (coming soon...)</h1>-->
-
-
 
 		</div>
 
@@ -748,10 +574,8 @@
 			includeHTML();
 		</script>
 		-->
-		<script src="./SIDD_files/jquery-2.1.1.js.下载"></script>
-		<script src="./SIDD_files/jquery.mobile.custom.min.js.下载"></script> <!-- Resource jQuery -->
-		<script src="./SIDD_files/main.js.下载"></script> <!-- Resource jQuery -->
-
-	
+		<script src="./files/jquery-2.1.1.js.下载"></script>
+		<script src="./files/jquery.mobile.custom.min.js.下载"></script> <!-- Resource jQuery -->
+		<script src="./files/main.js.下载"></script> <!-- Resource jQuery -->
 
 </body></html>
