--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <div class="topnav">
 		<a href="home.html"><h2>Home</h2></a>
-		<a href="survey.html"><h2>Survey</h2></a>
+		<a href="publication/index.html"><h2>Survey</h2></a>
 		<a href="benchmark.html"><h2>Benchmark</h2></a>
 </div>
 
