--- a/home.html
+++ b/home.html
@@ -70,10 +70,20 @@
 		</p>
 
 		<div class="entry grey-back" >
+	<i>
+	<p>
+		This survey and the designed online platform could serve as a reference source for future study and promote the development of the community. The proposed platform and the collected methods, datasets, and comparison results are publicly available and will be regularly updated at this website.
+	</p>
+	<!--
+	<p>
+		The benchmark is currently hosted here on this website.
+	</p>
+	-->
+		</i>
 </div>
 			<figure class="cd-image-container">
 				<img src="./img/rain.png" alt="Noisy Image">
-				<span class="cd-image-label" data-type="original">Noisy</span>
+				<span class="cd-image-label" data-type="original">Rainy Image</span>
 
 				<div class="cd-resize-img"> <!-- the resizable image on top -->
 					<img src="./img/gt.png" alt="Ground Truth Image">
@@ -159,7 +169,6 @@
 				<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=UvAnV6DMvsWrDhyqfAW9pOR-O0NWV6F5XtmusegOD9A&cl=ffffff&w=a"></script>
             </div>
            <br>
-        &copy; Xiang Chen | <span style="color:Red">Last updated: March 01, 2023</span>
             </div>
      </div>     
     
