--- a/survey.html
+++ b/survey.html
@@ -10,15 +10,15 @@
 		<!--<link rel="stylesheet" href="css/reset.css"/>  -->
 		<link rel="stylesheet" href="./files/styles.css">
 
-		<script type="text/javascript" src="./files/scripts.js.下载"></script>
+		<script type="text/javascript" src="./files/scripts.js"></script>
 
 		<!-- for slider -->
 		<link href="./files/css" rel="stylesheet" type="text/css">
 
-		<script src="./files/modernizr.js.下载"></script>
+		<script src="./files/modernizr.js"></script>
 		
 		<!-- table sorting -->
-		<script src="./files/sort_table.js.下载"></script>
+		<script src="./files/sort_table.js"></script>
 		<link href="./files/font-awesome.min.css" rel="stylesheet">、
 		
 		<style>
