[feat]:update survey.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 	<div class="topnav">
 			<a href="index.html"><h2>Home</h2></a>
-			<a href="survey.html"><h2>Survey</h2></a>
+			<a href="/publication/index.html"><h2>Survey</h2></a>
 			<a href="benchmark.html"><h2>Benchmark</h2></a>
 	</div>
 
