--- a/benchmark.html
+++ b/benchmark.html
@@ -60,7 +60,7 @@
 </div>
 
 <div class="topnav">
-    <a href="home.html"><h2>Home</h2></a>
+    <a href="index.html"><h2>Home</h2></a>
     <a href="publication/index.html"><h2>Survey</h2></a>
     <a href="benchmark.html"><h2>Benchmark</h2></a>
 </div>
