--- a/benchmark.html
+++ b/benchmark.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<title>Deraining</title>
-		<link rel="shortcut icon" href="http://www.cs.yorku.ca/~kamel/sidd/favicon.ico" type="image/ico">
+		<!-- <link rel="shortcut icon" href="http://www.cs.yorku.ca/~kamel/sidd/favicon.ico" type="image/ico"> -->
 
 		<!--<link rel="stylesheet" href="css/reset.css"/>  -->
 		<link rel="stylesheet" href="./files/styles.css">
