--- a/survey/index.html
+++ b/survey/index.html
@@ -281,10 +281,10 @@
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
    <span class="article-metadata li-cite-author">
    <span >
-    Restoring Vision in Adverse Weather Conditions with Patch-Based Denoising Diffusion Models (TPAMI 2023)
+    Restoring Vision in Adverse Weather Conditions with Patch-Based Denoising Diffusion Models
    </span>
   <p> 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/document/10021824" target="_blank" rel="noopener">Paper</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/document/10021824" target="_blank" rel="noopener">TPAMI'23</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/IGITUGraz/WeatherDiffusion" target="_blank" rel="noopener">Code</a>
   </p>
  </div>
@@ -313,7 +313,6 @@
    </span>
   <p> 
 <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/document/10035447" target="_blank" rel="noopener">Paper</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="" target="_blank" rel="noopener">Code</a>
   </p>
  </div>
 </div>  
