--- a/survey/index.html
+++ b/survey/index.html
@@ -267,10 +267,10 @@
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
    <span class="article-metadata li-cite-author">
    <span >
-    Image Restoration with Mean-Reverting Stochastic Differential Equations (ICML 2023)
+    Image Restoration with Mean-Reverting Stochastic Differential Equations
    </span>
   <p> 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2301.11699" target="_blank" rel="noopener">Paper</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2301.11699" target="_blank" rel="noopener">ICML'23</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/Algolzw/image-restoration-sde" target="_blank" rel="noopener">Code</a>
   </p>
  </div>
@@ -295,10 +295,10 @@
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
    <span class="article-metadata li-cite-author">
    <span >
-    Learning A Sparse Transformer Network for Effective Image Deraining (CVPR 2023)
+    Learning A Sparse Transformer Network for Effective Image Deraining
    </span>
   <p> 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2303.11950" target="_blank" rel="noopener">Paper</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2303.11950" target="_blank" rel="noopener">CVPR'23</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/cschenxiang/DRSformer" target="_blank" rel="noopener">Code</a>
   </p>
  </div>
@@ -309,14 +309,27 @@
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
    <span class="article-metadata li-cite-author">
    <span >
-    Continual Image Deraining with Hypergraph Convolutional Networks (TPAMI 2023)
+    Continual Image Deraining with Hypergraph Convolutional Networks
    </span>
   <p> 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/document/10035447" target="_blank" rel="noopener">Paper</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/document/10035447" target="_blank" rel="noopener">TPAMI'23</a>
   </p>
  </div>
 </div>  
-  
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2023">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Hybrid CNN-Transformer Feature Fusion for Single Image Deraining
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="" target="_blank" rel="noopener">AAAI'23</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/cschenxiang/HCT-FFN" target="_blank" rel="noopener">Code</a>
+  </p>
+ </div>
+</div>  
 
     </div>
   </div>
