--- a/survey/index.html
+++ b/survey/index.html
@@ -271,7 +271,7 @@
    </span>
   <p> 
 <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2301.11699" target="_blank" rel="noopener">ICML'23</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/Algolzw/image-restoration-sde" target="_blank" rel="noopener">Code</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/Algolzw/image-restoration-sde" target="_blank" rel="noopener">IR-SDE Code</a>
   </p>
  </div>
 </div>        
@@ -285,7 +285,7 @@
    </span>
   <p> 
 <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/document/10021824" target="_blank" rel="noopener">TPAMI'23</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/IGITUGraz/WeatherDiffusion" target="_blank" rel="noopener">Code</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/IGITUGraz/WeatherDiffusion" target="_blank" rel="noopener">WeatherDiffusion Code</a>
   </p>
  </div>
 </div>
@@ -299,7 +299,7 @@
    </span>
   <p> 
 <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2303.11950" target="_blank" rel="noopener">CVPR'23</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/cschenxiang/DRSformer" target="_blank" rel="noopener">Code</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/cschenxiang/DRSformer" target="_blank" rel="noopener">DRSformer Code</a>
   </p>
  </div>
 </div>
@@ -313,6 +313,7 @@
    </span>
   <p> 
 <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/document/10035447" target="_blank" rel="noopener">TPAMI'23</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="" target="_blank" rel="noopener">HCN Code</a>
   </p>
  </div>
 </div>  
@@ -326,11 +327,40 @@
    </span>
   <p> 
 <a class="btn btn-outline-primary btn-page-header btn-sm" href="" target="_blank" rel="noopener">AAAI'23</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/cschenxiang/HCT-FFN" target="_blank" rel="noopener">Code</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/cschenxiang/HCT-FFN" target="_blank" rel="noopener">HCT-FFN Code</a>
   </p>
  </div>
 </div>  
 
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2022">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Image De-raining Transformer
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/document/9798773" target="_blank" rel="noopener">TPAMI'22</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/jiexiaou/IDT" target="_blank" rel="noopener">IDT Code</a>
+  </p>
+ </div>
+</div>  
+ 
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2022">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Generative Status Estimation and Information Decoupling for Image Rain Removal
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://proceedings.neurips.cc/paper_files/paper/2022/file/1dc2fe8d9ae956616f86bab3ce5edc59-Paper-Conference.pdf" target="_blank" rel="noopener">NeurIPS'22</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/wxxx1025/SEIDNet" target="_blank" rel="noopener">SEIDNet Code</a>
+  </p>
+ </div>
+</div>     
+   
+   
     </div>
   </div>
 </div>
