--- a/survey/index.html
+++ b/survey/index.html
@@ -514,6 +514,75 @@
  </div>
 </div>     
  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2022">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Dreaming to Prune Image Deraining Networks
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content/CVPR2022/papers/Zou_Dreaming_To_Prune_Image_Deraining_Networks_CVPR_2022_paper.pdf" target="_blank" rel="noopener">CVPR'22</a>
+  </p>
+ </div>
+</div>  
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2022">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    KNN Local Attention for Image Restoration
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content/CVPR2022/papers/Lee_KNN_Local_Attention_for_Image_Restoration_CVPR_2022_paper.pdf" target="_blank" rel="noopener">CVPR'22</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="" target="_blank" rel="noopener">KiT Code</a>
+  </p>
+ </div>
+</div>   
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2022">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Learning Multiple Adverse Weather Removal via Two-stage Knowledge Learning and Multi-contrastive Regularization: Toward a Unified Model
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content/CVPR2022/papers/Chen_Learning_Multiple_Adverse_Weather_Removal_via_Two-Stage_Knowledge_Learning_and_CVPR_2022_paper.pdf" target="_blank" rel="noopener">CVPR'22</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/fingerk28/Two-stage-Knowledge-For-Multiple-Adverse-Weather-Removal" target="_blank" rel="noopener">Code</a>
+  </p>
+ </div>
+</div> 
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2022">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Towards Robust Rain Removal Against Adversarial Attacks: A Comprehensive Benchmark Analysis and Beyond
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2203.16931" target="_blank" rel="noopener">CVPR'22</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/yuyi-sd/Robust_Rain_Removal" target="_blank" rel="noopener">Code</a>
+  </p>
+ </div>
+</div>   
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2022">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Online-updated High-order Collaborative Networks for Single Image Deraining
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ojs.aaai.org/index.php/AAAI/article/view/20140" target="_blank" rel="noopener">AAAI'22</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://supercong94.wixsite.com/supercong94" target="_blank" rel="noopener">OHCNet Code</a>
+  </p>
+ </div>
+</div>     
+ 
   
   
     </div>
