--- a/survey/index.html
+++ b/survey/index.html
@@ -566,7 +566,18 @@
  </div>
 </div>     
  
-  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2012">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Automatic Single-Image-Based Rain Streaks Removal via Image Decomposition
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="http://www.ee.nthu.edu.tw/cwlin/Rain_Removal/tip_rain_removal_2011.pdf" target="_blank" rel="noopener">TIP'21</a>
+  </p>
+ </div>
+</div>   
   
     </div>
   </div>
