--- a/benchmark.html
+++ b/benchmark.html
@@ -66,7 +66,6 @@
 		<!-- /HEADER -->
 
 		<div class="body-container">
-</div>		
 
 			<h1>Benchmark Results</h1>
 
@@ -361,9 +360,9 @@
 			includeHTML();
 		</script>
 		-->
-		<script src="./js/jquery-2.1.1.js"></script>
-		<script src="./js/jquery.mobile.custom.min.js"></script> <!-- Resource jQuery -->
-		<script src="./js/main.js"></script> <!-- Resource jQuery -->
+		<script src="./files/jquery-2.1.1.js"></script>
+		<script src="./files/jquery.mobile.custom.min.js"></script> <!-- Resource jQuery -->
+		<script src="./files/main.js"></script> <!-- Resource jQuery -->
 
 	</body>
 </html>
