--- a/survey/index.html
+++ b/survey/index.html
@@ -586,7 +586,103 @@
   </p>
  </div>
 </div>     
- 
+
+  
+  
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2017">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Removing Rain from Single Images via A Deep Detail Network
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content_cvpr_2017/papers/Fu_Removing_Rain_From_CVPR_2017_paper.pdf" target="_blank" rel="noopener">CVPR'17</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://xueyangfu.github.io/projects/cvpr2017.html" target="_blank" rel="noopener">DDN Code</a>
+  </p>
+ </div>
+</div>  
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2017">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Deep Joint Rain Detection and Removal from a Single Image
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content_cvpr_2017/papers/Yang_Deep_Joint_Rain_CVPR_2017_paper.pdf" target="_blank" rel="noopener">CVPR'17</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://www.icst.pku.edu.cn/struct/Projects/joint_rain_removal.html" target="_blank" rel="noopener">JORDER Code</a>
+  </p>
+ </div>
+</div> 
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2017">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Joint Bi-layer Optimization for Single-image Rain Streak Removal
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content_ICCV_2017/papers/Zhu_Joint_Bi-Layer_Optimization_ICCV_2017_paper.pdf" target="_blank" rel="noopener">ICCV'17</a>
+  </p>
+ </div>
+</div> 
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2017">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Joint Convolutional Analysis and Synthesis Sparse Representation for Single Image Layer Separation
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content_ICCV_2017/papers/Gu_Joint_Convolutional_Analysis_ICCV_2017_paper.pdf" target="_blank" rel="noopener">ICCV'17</a>
+  </p>
+ </div>
+</div> 
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2016">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Rain Streak Removal Using Layer Priors
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="http://ieeexplore.ieee.org/document/7410745/" target="_blank" rel="noopener">CVPR'16</a>
+  </p>
+ </div>
+</div>   
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2015">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Removing Rain from A Single Image via Discriminative Sparse Coding
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="http://ieeexplore.ieee.org/document/7410745/" target="_blank" rel="noopener">ICCV'15</a>
+  </p>
+ </div>
+</div>   
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2013">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Restoring An Image Taken Through a Window Covered with Dirt or Rain
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://dl.acm.org/doi/10.1109/ICCV.2013.84" target="_blank" rel="noopener">ICCV'13</a>
+  </p>
+ </div>
+</div>    
+  
 <div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2012">
  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
