--- a/survey/index.html
+++ b/survey/index.html
@@ -588,7 +588,19 @@
 </div>     
 
   
-  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2017">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Clearing the Skies: A Deep Network Architecture for Single-Image Rain Removal
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/abstract/document/7893758" target="_blank" rel="noopener">CVPR'17</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://xueyangfu.github.io/projects/tip2017.html" target="_blank" rel="noopener">DerainNet Code</a>
+  </p>
+ </div>
+</div>   
   
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2017">
  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
@@ -643,6 +655,19 @@
   </p>
  </div>
 </div> 
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2017">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    A Hierarchical Approach for Rain or Snow Removing in a Single Color Image
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/abstract/document/7934435" target="_blank" rel="noopener">TIP'17</a>
+  </p>
+ </div>
+</div>  
   
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2016">
  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
