--- a/survey/index.html
+++ b/survey/index.html
@@ -587,6 +587,89 @@
  </div>
 </div>     
 
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2018">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Density-aware Single Image De-raining using a Multi-stream Dense Network
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/1802.07412" target="_blank" rel="noopener">CVPR'18</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/hezhangsprinter/DID-MDN" target="_blank" rel="noopener">DID-MDN Code</a>
+  </p>
+ </div>
+</div>   
+ 
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2018">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Attentive Generative Adversarial Network for Raindrop Removal from a Single Image
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/1711.10098" target="_blank" rel="noopener">CVPR'18</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/rui1996/DeRaindrop" target="_blank" rel="noopener">DeRaindrop Code</a>
+  </p>
+ </div>
+</div>  
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2018">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Learning Dual Convolutional Neural Networks for Low-Level Vision
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="http://faculty.ucmerced.edu/mhyang/papers/cvpr2018_dual_cnn.pdf" target="_blank" rel="noopener">CVPR'18</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/jspan/dualcnn" target="_blank" rel="noopener">DualCNN Code</a>
+  </p>
+ </div>
+</div>   
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2018">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Recurrent Squeeze-and-Excitation Context Aggregation Net for Single Image Deraining
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/pdf/1807.05698.pdf" target="_blank" rel="noopener">ECCV'18</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://xialipku.github.io/RESCAN/" target="_blank" rel="noopener">RESCAN Code</a>
+  </p>
+ </div>
+</div>     
+  
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2018">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+   Residual-Guide Network for Single Image Deraining
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/1804.07493" target="_blank" rel="noopener">ACM MM'18</a>
+  </p>
+ </div>
+</div>   
+
+ <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2018">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Non-locally Enhanced Encoder-Decoder Network for Single Image De-raining
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/pdf/1808.01491.pdf" target="_blank" rel="noopener">ACM MM'18</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/AlexHex7/NLEDN" target="_blank" rel="noopener">NLEDN Code</a>
+  </p>
+ </div>
+</div>   
   
 <div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2017">
  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
@@ -607,7 +690,7 @@
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
    <span class="article-metadata li-cite-author">
    <span >
-    Removing Rain from Single Images via A Deep Detail Network
+    Removing Rain from Single Images via a Deep Detail Network
    </span>
   <p> 
 <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content_cvpr_2017/papers/Fu_Removing_Rain_From_CVPR_2017_paper.pdf" target="_blank" rel="noopener">CVPR'17</a>
