--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 </div>			
 		<p>
-			<a href="http://130.63.97.225/sidd/benchmark_submit.php" class="button-block">Click here to submit your results</a>
+			<a href="submit.html" class="button-block">Click here to submit your results</a>
 		</p>
 
 		<div class="entry grey-back" >
