--- a/survey/index.html
+++ b/survey/index.html
@@ -198,8 +198,10 @@
   </div>
 
   <div class="page-body">
-    
-
+  <div class="universal-wrapper pt-3">
+    <p>[<b><a href="../index.html">Go back to the Home page</a></b>]</p>
+  
+  </div>   
 
   
 <!-- publications -->
