--- a/benchmark.html
+++ b/benchmark.html
@@ -67,6 +67,101 @@
 		<!-- /HEADER -->
 
 		<div class="body-container">
+			<h1>SIDD Benchmark</h1>
+
+			<div class="entry grey-back" >
+
+	<i>
+	<p>
+		A new version of SIDD Benchmark (<b>SIDD+</b>) is being hosted as a challenge at the <a target="_blank" href="http://www.vision.ee.ethz.ch/en/ntire20/">New Trends in Image Restoration and Enhancement (NTIRE 2020) workshop</a> in conjunction with <a target="_blank" href="http://cvpr2020.thecvf.com/">CVPR 2020</a>. 
+		<br>
+		The participating solutions and results will be published in the challenge report in the CVPR 2020 Workshop proceedings.
+	</p>
+	<p>
+		Challenges can be accessed at the following Codalab competitions:
+		<br>
+		<a target="_blank" href="https://competitions.codalab.org/competitions/22230">NTIRE 2020 Real Image Denoising Challenge - Track 1 - rawRGB</a>
+		<br>
+		<a target="_blank" href="https://competitions.codalab.org/competitions/22231">NTIRE 2020 Real Image Denoising Challenge - Track 2 - sRGB</a>
+	</p>
+	<!--
+	<p>
+		The benchmark is currently hosted here on this website.
+	</p>
+	-->
+	</i>
+</div>
+
+			
+			<h2>Download</h2>
+
+			<p>
+				<!--
+				[<b><a href="ftp://sidd_user:sidd_2018@130.63.97.225/SIDD_Benchmark_Code_v1.1.zip" target="_blank">Download the SIDD Benchmark Code v1.1 (9 KB)</a></b>]
+				&nbsp; MD5: c2d8ea51ca20cbecef73cff519aeb080 &nbsp; SHA1: e99b0b162a55e8114e9b812ca53228f3c12308b7
+				-->
+				<b>SIDD Benchmark Code v1.2</b> (9 KB) 
+				[
+					<b><a href="https://competitions.codalab.org/my/datasets/download/5e155184-78f6-4740-9877-59122e975d92" target="_blank">Mirror 1</a></b> | 
+					<b><a href="ftp://sidd_user:sidd_2018@130.63.97.225/SIDD_Benchmark_Code_v1.2.zip" target="_blank">Mirror 2</a></b> | 
+					<b><a href="https://mega.nz/#!9RNxmQZI!m4vTnlmw615TFdt60lvLVVUAtoi1geYKhXCs3sKycuU" target="_blank">Mirror 3</a></b> | 
+					<b><a href="https://ln.sync.com/dl/03aca52d0/ctqu3zfr-55p7hhde-vmssu3j5-jzx7hqfg" target="_blank">Mirror 4</a></b>
+				]
+			</p>
+
+			
+			<p>
+				<b>SIDD Benchmark Data</b> as single .mat arrays of dimensoins [#images, #blocks, height, width, #channels]:
+				<br>
+				Noisy raw-RGB data: [
+					<b><a href="https://competitions.codalab.org/my/datasets/download/7a9badd9-fffc-4e56-ba41-0c5e2a76e58a" target="_blank"  rel="noopener">Mirror 1</a></b> | 
+					<b><a href="ftp://sidd_user:sidd_2018@130.63.97.225/SIDD_Blocks/BenchmarkNoisyBlocksRaw.mat" target="_blank"  rel="noopener">Mirror 2</a></b>
+					]
+				<br>
+				Noisy sRGB data: [
+					<b><a href="https://competitions.codalab.org/my/datasets/download/0d8a1e68-155d-4301-a8cd-9b829030d719" target="_blank"  rel="noopener">Mirror 1</a></b> | 
+					<b><a href="ftp://sidd_user:sidd_2018@130.63.97.225/SIDD_Blocks/BenchmarkNoisyBlocksSrgb.mat" target="_blank"  rel="noopener">Mirror 2</a></b>
+					]
+				<br>
+			</p>
+			
+			<p>
+				<b>SIDD Validation Data and Ground Truth</b> as single .mat arrays of dimensoins [#images, #blocks, height, width, #channels]:
+				<br>
+				Noisy raw-RGB data: [
+					<b><a href="https://competitions.codalab.org/my/datasets/download/549374a5-5e7d-4daf-a977-993187b2d050" target="_blank"  rel="noopener">Mirror 1</a></b> | 
+					<b><a href="ftp://sidd_user:sidd_2018@130.63.97.225/SIDD_Blocks/ValidationNoisyBlocksRaw.mat" target="_blank"  rel="noopener">Mirror 2</a></b>
+					]
+				<br>
+				Noisy sRGB data: [
+					<b><a href="https://competitions.codalab.org/my/datasets/download/260ed944-21e7-4317-bd66-a6dd42343838" target="_blank"  rel="noopener">Mirror 1</a></b> | 
+					<b><a href="ftp://sidd_user:sidd_2018@130.63.97.225/SIDD_Blocks/ValidationNoisyBlocksSrgb.mat" target="_blank"  rel="noopener">Mirror 2</a></b>
+					]
+				<br>
+				Ground-truth raw-RGB data: [
+					<b><a href="https://competitions.codalab.org/my/datasets/download/6d90a38a-6d6d-4dff-a3ab-413f5208b7bd" target="_blank"  rel="noopener">Mirror 1</a></b> | 
+					<b><a href="ftp://sidd_user:sidd_2018@130.63.97.225/SIDD_Blocks/ValidationGtBlocksRaw.mat" target="_blank"  rel="noopener">Mirror 2</a></b>
+					]
+				<br>
+				Ground-truth sRGB data: [
+					<b><a href="https://competitions.codalab.org/my/datasets/download/5349efe0-dfa2-499e-a46f-49c623285ba7" target="_blank"  rel="noopener">Mirror 1</a></b> | 
+					<b><a href="ftp://sidd_user:sidd_2018@130.63.97.225/SIDD_Blocks/ValidationGtBlocksSrgb.mat" target="_blank"  rel="noopener">Mirror 2</a></b>
+					]
+				<br>
+			</p>
+			
+			
+			<p>
+				<b>SIDD Benchmark Data</b> (full-frame images, 1.84 GB) 
+				[
+					<b><a href="https://competitions.codalab.org/my/datasets/download/45386094-eaff-43a4-989b-073541f9867e" target="_blank">Mirror 1</a></b> | 
+					<b><a href="ftp://sidd_user:sidd_2018@130.63.97.225/SIDD_Benchmark_Data.zip" target="_blank">Mirror 2</a></b> | 
+					<b><a href="https://mega.nz/#!gQ9iBARQ!l_8afm2Qetx61RUhW8kE_qtd6RlMpfkdTMer3xKrl9Q" target="_blank">Mirror 3</a></b> | 
+					<b><a href="https://ln.sync.com/dl/9a7e12900/z7vtztvg-t645euaw-de36sizb-bericid7" target="_blank">Mirror 4</a></b>
+				]
+				<br>
+				MD5: decd113eaf99a8dbd1dbb7f7c9dafedd &nbsp; SHA1: b8092d990139f41b6da97b4afa679a2876de53bd
+			</p>
 
 			<h1>Benchmark Results</h1>
 
