--- a/benchmark.html
+++ b/benchmark.html
@@ -163,6 +163,11 @@
 				MD5: decd113eaf99a8dbd1dbb7f7c9dafedd &nbsp; SHA1: b8092d990139f41b6da97b4afa679a2876de53bd
 			</p>
 
+						
+			<h1>Upload your results</h1>
+			
+			<a href="submit.html" class="button">Click here to submit your results</a>
+
 			<h1>Benchmark Results</h1>
 
 			<p>
